--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
                         <h2>Food so nutritious mother-nature wants it back.</h2>
                         <h3><span class="logo-text">QuickBite</span> is food!</h3>
                         <p>
-                            At <span class="logo-text">QuickBite</span> we have decided to re-imagine what fast food is.<br>
-                            We pride ourselves on our fresh and nutritious ingredients.<br>
-                            Locally sourced as often as not.<br>
+                            At <span class="logo-text">QuickBite</span> we have decided to re-imagine what fast food is. 
+                            We pride ourselves on our fresh and nutritious ingredients.
+                            Locally sourced as often as not. 
                             Are goal is to make simple dishes that taste amazing and satisfy your hunger.
                         </p>
                     </li>
@@ -128,9 +128,9 @@
                         <h2>Portions big enough to feed a wild animal.</h2>
                         <h3>Portions that please!</h3>
                         <p>
-                            <span class="logo-text">QuickBite</span> is here to feed you.<br>
-                            We don't skimp on portion size.<br>
-                            When you leave our restarant we want you to feel satisfied.<br>
+                            <span class="logo-text">QuickBite</span> is here to feed you. 
+                            We don't skimp on portion size. 
+                            When you leave our restarant we want you to feel satisfied. 
                             We believe calories are your friend as long as the ingredients are healthy and nutritious.
                         </p>
                     </li>
@@ -138,9 +138,9 @@
                         <h2>We use food in our food. That means no colors, preservatives or nasty additives.</h2>
                         <h3>Your health is our wealth!</h3>
                         <p>
-                            At <span class="logo-text">QuickBite</span> we wanted to make a restaurant that we wanted to eat in.<br>
-                            We decided that we would make a promise, never to use added colors, preservatives or any other nasty additives.<br>
-                            If you don't know what an ingredient means or if it's name has more numbers than letters, you wont find it here.<br>
+                            At <span class="logo-text">QuickBite</span> we wanted to make a restaurant that we wanted to eat in. 
+                            We decided that we would make a promise, never to use added colors, preservatives or any other nasty additives. 
+                            If you don't know what an ingredient means or if it's name has more numbers than letters, you wont find it here. 
                             None of our sides, mains, or drinks contain sugar, or artificial sweetners. In fact the only place you will find sugar is in our desserts menu. Everybody deserves a treat once in a while :)
                         </p>
                     </li>
@@ -148,11 +148,11 @@
                         <h2>Food for one. Food for all.</h2>
                         <h3>We are <span class="logo-text">QuickBite</span>!</h3>
                         <p>
-                            At <span class="logo-text">QuickBite</span>  we understand that in todays world everybody has different dietary requirements.<br>
-                            We never want to leave anybody out, everybody gets fed, everybody leaves with a smile.<br>
-                            Our menu has been specially designed to ensure that we can serve something for everyone.<br>
-                            That means if you are vegan, vegetarian or pescatarian, there's something for you.<br>
-                            And that also means if you are a celiac or lactose intolerant, there's something for you too!
+                            At <span class="logo-text">QuickBite</span>  we understand that in todays world everybody has different dietary requirements. 
+                            We never want to leave anybody out, everybody gets fed, everybody leaves with a smile. 
+                            Our menu has been specially designed to ensure that we can serve something for everyone. 
+                            That means if you are vegan, vegetarian or pescatarian, there's something for you. 
+                            That also means if you are a celiac or lactose intolerant, there's something for you too!
                         </p>
                     </li>
                 </ul>
