scroll prompt added

--- a/index.html
+++ b/index.html
@@ -102,11 +102,12 @@
             <div id="welcome-text">
                 <div id="text-and-button">
                     <h1>Hungry?<br>Grab a <span class="logo-text-main">QuickBite</span>!</h1>
-                    <span class="down-button-container">
-                        <a href="#restaurant-info">
+                    <div id="down-button-container" class="down-button-container">
+                        <a id="down-button-link" href="#restaurant-info">
                             <img id="down-button" class="button responsive" src="images-and-svgs\svgs\arrows\down-arrow.svg">
+                            <p id="scroll-prompt">Scroll</p>
                         </a>
-                    </span>
+                    </div>
                 </div>
             </div>
         </div>
