Some fixes made menu links working / js files tidied

--- a/menu.html
+++ b/menu.html
@@ -109,7 +109,7 @@
             </div>
             <ul id="menu-list">
                 <li id="sides" class="menu-list-item">
-                    <div id="category-welcome-text">
+                    <div class="category-welcome-text">
                         <img src="images-and-svgs\svgs\menu\fries-svgrepo-com.svg">
                         <h2>Sides</h2>
                         <img src="images-and-svgs\svgs\menu\fries-svgrepo-com.svg">
@@ -140,7 +140,7 @@
                     </ul>
                 </li>
                 <li id="mains" class="menu-list-item">
-                    <div id="category-welcome-text">
+                    <div class="category-welcome-text">
                         <img src="images-and-svgs\svgs\menu\burger2-svgrepo-com.svg">
                         <h2>Mains</h2>
                         <img src="images-and-svgs\svgs\menu\burger2-svgrepo-com.svg">
@@ -212,8 +212,8 @@
                         </li>
                     </ul>
                 </li>
-                <li id="specials" class="menu-list-item">
-                    <div id="category-welcome-text">
+                <li class="menu-list-item">
+                    <div id="specials" class="category-welcome-text">
                         <img src="images-and-svgs\svgs\menu\gift-svgrepo-com.svg">
                         <h2>Specials</h2>
                         <img src="images-and-svgs\svgs\menu\gift-svgrepo-com.svg">
@@ -244,7 +244,7 @@
                     </ul>
                 </li>
                 <li id="drinks" class="menu-list-item">
-                    <div id="category-welcome-text">
+                    <div class="category-welcome-text">
                         <img src="images-and-svgs\svgs\menu\drink-round-688-svgrepo-com.svg">
                         <h2>Drinks</h2>
                         <img src="images-and-svgs\svgs\menu\drink-round-688-svgrepo-com.svg">
@@ -270,7 +270,7 @@
                     </ul>
                 </li>
                 <li id="desserts" class="menu-list-item">
-                    <div id="category-welcome-text">
+                    <div class="category-welcome-text">
                         <img src="images-and-svgs\svgs\menu\cake-3-svgrepo-com.svg">
                         <h2>Desserts</h2>
                         <img src="images-and-svgs\svgs\menu\cake-3-svgrepo-com.svg">
@@ -296,7 +296,7 @@
                     </ul>
                 </li>
                 <li id="sauces" class="menu-list-item">
-                    <div id="category-welcome-text">
+                    <div class="category-welcome-text">
                         <img src="images-and-svgs\svgs\menu\sauce-bottle-svgrepo-com.svg">
                         <h2>Sauces</h2>
                         <img src="images-and-svgs\svgs\menu\sauce-bottle-svgrepo-com.svg">
