scroll button work

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <div id="down-button-container" class="down-button-container">
                         <a id="down-button-link" href="#restaurant-info">
                             <img id="down-button" class="button responsive" src="images-and-svgs\svgs\arrows\down-arrow.svg">
-                            <p id="scroll-prompt">Scroll</p>
+                            <p id="scroll-prompt">SCROLL DOWN</p>
                         </a>
                     </div>
                 </div>
