scroll button code refactoring

--- a/about.html
+++ b/about.html
@@ -65,15 +65,14 @@
             </ul> 
         </nav>
         <div id="lake-welcome" class="landing">
-            <div id="lake-text">
-                <div id="text">
-                    <h1><span class="logo-text-main">QuickBite</span> @ The Point</h1>
-                    <span class="down-button-container">
-                        <a href="#location">
-                            <img id="down-button" class="button responsive" src="images-and-svgs\svgs\arrows\down-arrow.svg">
-                        </a>
-                    </span>
-                </div>
+            <div class="welcome-text" id="lake-text">
+                <h1><span class="logo-text-main">QuickBite</span> @ The Point</h1>
+            </div>
+            <div class="down-button-container">
+                <a class="down-button-link" href="#location">
+                    <img id="down-button" class="button responsive" src="images-and-svgs\svgs\arrows\down-arrow.svg">
+                    <p id="scroll-prompt">SCROLL DOWN</p>
+                </a>
             </div>
         </div>
         <div id="nav-button-menu">
