--- a/index.html
+++ b/index.html
@@ -100,16 +100,14 @@
             </ul>
         </div>
         <div id="welcome-section" class="landing">
-            <div id="welcome-text">
-                <div id="text-and-button">
-                    <h1>Hungry?<br>Grab a <span class="logo-text-main">QuickBite</span>!</h1>
-                    <div id="down-button-container" class="down-button-container">
-                        <a id="down-button-link" href="#restaurant-info">
-                            <img id="down-button" class="button responsive" src="images-and-svgs\svgs\arrows\down-arrow.svg">
-                            <p id="scroll-prompt">SCROLL DOWN</p>
-                        </a>
-                    </div>
-                </div>
+            <div class="welcome-text">
+                <h1>Hungry?<br>Grab a <span class="logo-text-main">QuickBite</span>!</h1>  
+            </div>
+            <div class="down-button-container">
+                <a class="down-button-link" href="#restaurant-info">
+                    <img id="down-button" class="button responsive" src="images-and-svgs\svgs\arrows\down-arrow.svg">
+                    <p id="scroll-prompt">SCROLL DOWN</p>
+                </a>
             </div>
         </div>
         <div id="restaurant-info-container">
