changing continue prompt

--- a/about.html
+++ b/about.html
@@ -135,7 +135,7 @@
                             <p>Loughrea,</p>
                         </li>
                         <li>
-                            <p>Co.Galway.</p>
+                            <p>Galway.</p>
                         </li>
                     </ul>
                 </div>
@@ -179,11 +179,11 @@
             </div>
             <div class="continue-prompt">
                 <h1>To get in touch, click below!</h1>
-                <span class="side-button-container">
+                <div class="side-button-container">
                     <a href="contact.html">
                         <img class="button side" src="images-and-svgs\svgs\arrows\side-arrow.svg">
                     </a>
-                </span>
+                </div>
             </div>
         </div>
     </main>
