--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
         </div>
         <div class="continue-prompt">
             <h1>Like what you see? Check out our menu!</h1>
-            <span class="side-button-container">
+            <div class="side-button-container">
                 <a href="menu.html">
                     <img class="button side" src="images-and-svgs\svgs\arrows\side-arrow.svg">
                 </a>
-            </span>
+            </div>
         </div>
     </main>
     <footer>
