--- a/menu.html
+++ b/menu.html
@@ -340,11 +340,11 @@
             </ul>
             <div class="continue-prompt content" id="menu-continue-prompt">
                 <h1>Find out more about us!</h1>
-                <span class="side-button-container">
+                <div class="side-button-container">
                     <a href="about.html">
                         <img class="button side" src="images-and-svgs\svgs\arrows\side-arrow.svg">
                     </a>
-                </span>
+                </div>
             </div>
         </div>
     </main>
