--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
             <div class="welcome-text">
                 <h1>Hungry?<br>Grab a <span class="logo-text-main">QuickBite</span>!</h1>  
             </div>
-            <div class="down-button-container">
-                <a class="down-button-link" href="#restaurant-info">
-                    <img id="down-button" class="button responsive" src="images-and-svgs\svgs\arrows\down-arrow.svg">
+            <div class="button-container down">
+                <a class="button-link" href="#restaurant-info">
+                    <img id="down-button" class="button" src="images-and-svgs\svgs\arrows\down-arrow.svg">
                     <p id="scroll-prompt">SCROLL DOWN</p>
                 </a>
             </div>
@@ -160,9 +160,10 @@
         </div>
         <div class="continue-prompt">
             <h1>Like what you see? Check out our menu!</h1>
-            <div class="side-button-container">
-                <a href="menu.html">
-                    <img class="button side" src="images-and-svgs\svgs\arrows\side-arrow.svg">
+            <div class="button-container side">
+                <a class="button-link" href="menu.html">
+                    <img id="side-button" class="button" src="images-and-svgs\svgs\arrows\side-arrow.svg">
+                    <p id="continue-prompt">CONTINUE</p>
                 </a>
             </div>
         </div>
@@ -180,7 +181,7 @@
             <div id="created-by">
                 <p id="created-by-text">created by </p>
                 <a id="portfolio-link" href="https://www.github.com/MrGeorgiou">
-                     <img id="github-account" src="images-and-svgs\svgs\social-media\github-svgrepo-com.svg">
+                    <img id="github-account" src="images-and-svgs\svgs\social-media\github-svgrepo-com.svg">
                 </a>
             </div>
         </div>
