finished continue buttons

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     <main>
         <nav id="about-pg-nav">
             <div>
-                <img id="logo-small" src="images-and-svgs\svgs\logos\QuickBite-logo-small-red-white-alt-3.svg">
+                <img id="logo-small" src="images-and-svgs\svgs\logos\QuickBite-logo-small-red-white.svg">
             </div>
             <div id="nav-button">
                 <div class="nav-line"></div>
@@ -68,9 +68,9 @@
             <div class="welcome-text" id="lake-text">
                 <h1><span class="logo-text-main">QuickBite</span> @ The Point</h1>
             </div>
-            <div class="down-button-container">
-                <a class="down-button-link" href="#location">
-                    <img id="down-button" class="button responsive" src="images-and-svgs\svgs\arrows\down-arrow.svg">
+            <div class="button-container down">
+                <a class="button-link" href="#location">
+                    <img id="down-button" class="button" src="images-and-svgs\svgs\arrows\down-arrow.svg">
                     <p id="scroll-prompt">SCROLL DOWN</p>
                 </a>
             </div>
@@ -179,9 +179,10 @@
             </div>
             <div class="continue-prompt">
                 <h1>To get in touch, click below!</h1>
-                <div class="side-button-container">
-                    <a href="contact.html">
-                        <img class="button side" src="images-and-svgs\svgs\arrows\side-arrow.svg">
+                <div class="button-container side">
+                    <a class="button-link" href="contact.html">
+                        <img id="side-button" class="button" src="images-and-svgs\svgs\arrows\side-arrow.svg">
+                        <p id="continue-prompt">CONTINUE</p>
                     </a>
                 </div>
             </div>
