added href to nav logo

--- a/about.html
+++ b/about.html
@@ -22,9 +22,9 @@
 <body>
     <main>
         <nav id="about-pg-nav">
-            <div>
+            <a href="index.html">
                 <img id="logo-small" src="images-and-svgs\svgs\logos\QuickBite-logo-small-red-white.svg">
-            </div>
+            </a>
             <div id="nav-button">
                 <div class="nav-line"></div>
                 <div class="nav-line"></div>
