--- a/contact.html
+++ b/contact.html
@@ -20,10 +20,9 @@
 <body>
     <main>
         <nav class="alt">
-            
-            <div>
+            <a href="index.html">
                 <img id="logo-small" src="images-and-svgs\svgs\logos\QuickBite-logo-small-red-white.svg">
-            </div>
+            </a>
             <div id="nav-button">
                 <div class="nav-line"></div>
                 <div class="nav-line"></div>
