--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <body>
     <main>
         <nav>   
-            <div>
+            <a href="index.html">
                 <img id="logo-small" src="images-and-svgs\svgs\logos\QuickBite-logo-red-no-fill-whiteteeth.svg">
-            </div>
+            </a>
              <div id="nav-button">
                 <div class="nav-line"></div>
                 <div class="nav-line"></div>
